another attempt at fixing dash cutoff

--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -33,6 +33,7 @@ html {
     width: 80px;
     height: auto;
     margin-top: 20px;
+    margin-bottom: 24px;
 }
 
 .socials {
